--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,10 @@
+#* linguist-vendored
+#*.js linguist-vendored=false
+#*.html linguist-vendored=false
+#*.css linguist-vendored=false
+#*.php linguist-vendored=false
+
+# Detect languages
 *.java linguist-detectable=true
 *.html linguist-detectable=true
 *.css linguist-detectable=true
