--- a/.gitattributes
+++ b/.gitattributes
@@ -6,7 +6,7 @@
 
 # Detect languages
 * linguist-generated=false
-*.java linguist-detectable=true
-*.html linguist-detectable=true
 *.css linguist-detectable=true
+*.js linguist-detectable=true
+*.html linguist-detectable=true
 *.php linguist-detectable=true
